updated Om version

--- a/Om/resources/public/css/style.css
+++ b/Om/resources/public/css/style.css
@@ -6,8 +6,8 @@ body, html {
 div {
     align-items: center;
     display: flex;
-    justify-content: center;
-    height: 100vh;
+    justify-content: left;
+    height: 80vh;
 }
 
 select {
